--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.0",
+    "firebase": "^9.8.4",
+    "next": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
