--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.8.4",
+    "lodash.debounce": "^4.0.8",
     "next": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
